syntax = "proto3";

package app;

// Declare a service for each controller you have
service AppController {
  // Declare an rpc for each method that is called via gRPC
  rpc Accumulate (NumberArray) returns (SumOfNumberArray);

  rpc GetUsers (User) returns (Users);
  rpc CreateUser (User) returns (User);
}

// Declare the types used above
message NumberArray {
  repeated double data = 1;
}
message SumOfNumberArray {
  double sum = 1;
}

message User {
   string name = 1;
   string email = 1;
   string tenantId = 1;
   string role = 1;
   string provider = 1;
   string password = 1;
   string _id = 1;
}

message Users {
  repeated User users = 1;
}
